depois tem de concertar

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+      routes:
+        - id: estudantes
+          uri: lb://entudante-service
+          predicates:
+            - Path=/estudante-service/**
+
 
 logging:
   level:
